[gd_scene load_steps=2 format=3 uid="uid://twxc332aeyg5"]

[ext_resource type="Script" path="res://ui/setting/setting.gd" id="1_yvkuo"]

[node name="Setting" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -27.0
offset_top = -1.0
offset_right = -27.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvkuo")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -233.0
offset_top = -279.0
offset_right = 195.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 211
text = "设置"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 902.0
offset_top = 691.0
offset_right = 1346.0
offset_bottom = 903.0

[node name="MusicSound" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/MusicSound"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "音乐："

[node name="HSlider" type="HSlider" parent="VBoxContainer/MusicSound"]
custom_minimum_size = Vector2(317.77, 104.23)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="SoundEffect" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/SoundEffect"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "音效："

[node name="HSlider" type="HSlider" parent="VBoxContainer/SoundEffect"]
custom_minimum_size = Vector2(317.77, 104.23)
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="MaxScreen" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 61
text = "全屏"

[node name="Back" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 87.11)
layout_mode = 2
theme_override_font_sizes/font_size = 71
text = "back"

[connection signal="value_changed" from="VBoxContainer/MusicSound/HSlider" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SoundEffect/HSlider" to="." method="_on_effect_value_changed"]
[connection signal="pressed" from="VBoxContainer/MaxScreen" to="." method="_on_max_screen_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
